add: add final adjustments and labeling to all html pages

--- a/library.html
+++ b/library.html
@@ -20,6 +20,7 @@
 <body>
     <div class="container-fluid">
         <header class="row">
+            <!--------------------------Bootstrap Navigation Bar---------------------------->
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white navbar-padding">
 
                 <a class="navbar-logo" href="index.html">Hannah McNeish | Journalist</a>
@@ -37,31 +38,41 @@
                 </div>
 
             </nav>
+            <!-----------------------End of Navigation Bar------------------------------------>
         </header>
-        <section class="row carousel-row justify-content-center g-0">  
-            <div class="col-sm-12 col-lg-4 carousel-position">
-                <!--credit to Bootstrap for carousel-->
+        <section class="row carousel-row justify-content-center g-0">
+            <!---------------------- Bootstrap Carousel--------------------------------------->
+            <div class="col-sm-12 col-md-6 col-lg-4 carousel-position">
                 <div id="library-carousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/images/ssudan-young-boy-eating.jpg" width="612" height="408" class="d-block w-100"
-                                alt="A young boy eating piece of fruit" aria-label="A photo of a young boy eating a piece of fruit" >
+                            <img src="assets/images/ssudan-young-boy-eating.jpg" width="612" height="408"
+                                class="d-block w-100" alt="A young boy eating piece of fruit"
+                                aria-label="A photo of a young boy eating a piece of fruit">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/men-picking-up-scrap-metal.jpg" width="612" height="408" class="d-block w-100"
-                                alt="Men standing over scrap metal in a bare field" aria-label="A photo of men standing over scrap metal in a bare field">
+                            <img src="assets/images/men-picking-up-scrap-metal.jpg" width="612" height="408"
+                                class="d-block w-100" alt="Men standing over scrap metal in a bare field"
+                                aria-label="A photo of men standing over scrap metal in a bare field">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/ssudan-woman-carrying-baby.jpg" width="612" height="408" class="d-block w-100"
-                                alt="A girl carrying a baby in a UN camp" aria-label="A photo of a girl carrying a baby in a UN camp">
+                            <img src="assets/images/ssudan-woman-carrying-baby.jpg" width="612" height="408"
+                                class="d-block w-100" alt="A girl carrying a baby in a UN camp"
+                                aria-label="A photo of a girl carrying a baby in a UN camp">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/ssudan-man-in-hospital-bed.jpg" width="612" height="408" class="d-block w-100"
-                                alt="A man in a hospital bed in South Sudan" aria-label="A photo of a man in a hospital bed in South Sudan">
+                            <img src="assets/images/ssudan-man-in-hospital-bed.jpg" width="612" height="408"
+                                class="d-block w-100" alt="A man in a hospital bed in South Sudan"
+                                aria-label="A photo of a man in a hospital bed in South Sudan">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/african-artist-winni.jpg" width="612" height="408" class="d-block w-100"
-                                alt="African artist Winni performing on stage" aria-label="A photo of African artist Winni performing on stage">
+                            <img src="assets/images/african-artist-winni.jpg" width="612" height="408"
+                                class="d-block w-100" alt="African artist Winni performing on stage"
+                                aria-label="A photo of African artist Winni performing on stage">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/ssudan-army.jpg" width="612" height="408" class="d-block w-100"
+                                alt="South Sudan Army" aria-label="Picture of a South Sudan Army">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#library-carousel"
@@ -75,14 +86,15 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <!--credit end-->
             </div>
+            <!-----------------------------------End of Carousel--------------------------------------------->
         </section>
         <section>
             <div class="row row-spacing">
                 <div class="col-sm-6 col-lg-4">
                     <div class="card">
-                        <iframe title="International Journalism Festival" width="auto" height="315" src="https://www.youtube.com/embed/y8LhUdpNkXg" allowfullscreen></iframe>
+                        <iframe title="International Journalism Festival" width="auto" height="315"
+                            src="https://www.youtube.com/embed/y8LhUdpNkXg" allowfullscreen></iframe>
                         <div class="card-body">
                             <h5 class="card-title">International Journalism Festival 2019</h5>
                             <p class="card-text">When working in sensitive medical environments with people at their
@@ -91,9 +103,11 @@
                         </div>
                     </div>
                 </div>
+            <!------------------------------Video and Articles-------------------------------------------->
                 <div class="col-sm-6 col-lg-4">
                     <div class="card">
-                        <iframe title="BBC News Report" width="auto" height="315" src="https://www.youtube.com/embed/feCZqPs8Gsc" allowfullscreen></iframe>
+                        <iframe title="BBC News Report" width="auto" height="315"
+                            src="https://www.youtube.com/embed/feCZqPs8Gsc" allowfullscreen></iframe>
                         <div class="card-body">
                             <h5 class="card-title">BBC News 2017</h5>
                             <p class="card-text">In northern Kenya, the dry conditions have increased the
@@ -103,7 +117,8 @@
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="card">
-                        <iframe title="INews24 Report" width="auto" height="315" src="https://www.youtube.com/embed/7jHuyCTBpgw" allowfullscreen></iframe>
+                        <iframe title="INews24 Report" width="auto" height="315"
+                            src="https://www.youtube.com/embed/7jHuyCTBpgw" allowfullscreen></iframe>
                         <div class="card-body">
                             <h5 class="card-title">INews24 2015</h5>
                             <p class="card-text">Islamists storm Kenyan University - 15 killed.</p>
@@ -156,9 +171,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
 
             <div class="row row-spacing">
@@ -207,8 +219,8 @@
             <div class="row row-spacing">
                 <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/getty-images-logo.png" width="301" height="167" class="card-img-top card-logo"
-                            alt="Getty Images Logo">
+                        <img src="assets/images/getty-images-logo.png" width="301" height="167"
+                            class="card-img-top card-logo" alt="Getty Images Logo">
                         <div class="card-body">
                             <h6 class="card-title">View more of Hannah's images here.</h6>
                             <a href="https://www.gettyimages.co.nz/photos/hannah-mcneish?family=editorial&phrase=hannah%20mcneish&sort=best#license"
@@ -218,8 +230,8 @@
                 </div>
                 <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/the-new-humanitarian-logo.png" width="279" height="181" class="card-img-top card-logo"
-                            alt="The New Humanitarian Logo">
+                        <img src="assets/images/the-new-humanitarian-logo.png" width="279" height="181"
+                            class="card-img-top card-logo" alt="The New Humanitarian Logo">
                         <div class="card-body">
                             <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://deeply.thenewhumanitarian.org/womensadvancement/contributor/hannah-mcneish"
@@ -230,7 +242,8 @@
 
                 <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/aljazeera-logo.png" width="284" height="177" class="card-img-top card-logo" alt="Aljazeera Logo">
+                        <img src="assets/images/aljazeera-logo.png" width="284" height="177"
+                            class="card-img-top card-logo" alt="Aljazeera Logo">
                         <div class="card-body">
                             <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.aljazeera.com/author/hannah_mc_neish_20131123102749244312"
@@ -240,7 +253,8 @@
                 </div>
                 <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/guardian-logo.png" width="286" height="176" class="card-img-top card-logo" alt="The Guardian Logo">
+                        <img src="assets/images/guardian-logo.png" width="286" height="176"
+                            class="card-img-top card-logo" alt="The Guardian Logo">
                         <div class="card-body">
                             <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.theguardian.com/profile/hannah-mcneish" target="_blank" rel="noopener"
@@ -250,18 +264,19 @@
                 </div>
                 <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/reuters-logo.png" width="339" height="148" class="card-img-top card-logo" alt="Reuters Logo">
+                        <img src="assets/images/reuters-logo.png" width="339" height="148"
+                            class="card-img-top card-logo" alt="Reuters Logo">
                         <div class="card-body">
                             <h6 class="card-title">Read more of Hannah's article here.</h6>
-                            <a href="https://www.reuters.com/journalists/hannah-mcneish"
-                                target="_blank" rel="noopener" class="btn btn-secondary">Reuters</a>
+                            <a href="https://www.reuters.com/journalists/hannah-mcneish" target="_blank" rel="noopener"
+                                class="btn btn-secondary">Reuters</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/huffington-post-logo.png" width="286" height="176" class="card-img-top card-logo"
-                            alt="The Huffington Post Logo">
+                        <img src="assets/images/huffington-post-logo.png" width="286" height="176"
+                            class="card-img-top card-logo" alt="The Huffington Post Logo">
                         <div class="card-body">
                             <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.huffpost.com/author/hannah-mcneish" target="_blank" rel="noopener"
@@ -272,12 +287,11 @@
 
             </div>
             <div class="row row-spacing justify-content-center">
-                
 
                 <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/voice-of-america-logo.png" width="254" height="198" class="card-img-top card-logo"
-                            alt="Voice of America Logo">
+                        <img src="assets/images/voice-of-america-logo.png" width="254" height="198"
+                            class="card-img-top card-logo" alt="Voice of America Logo">
                         <div class="card-body">
                             <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.voanews.com/author/hannah-mcneish" target="_blank" rel="noopener"
@@ -298,7 +312,9 @@
                 </div>
 
             </div>
+        <!----------------------------------------End of Video and Articles------------------------------------------->
         </section>
+        <!---------------------------------------------Footer------------------------------------------------------------->
         <footer>
             <div id="footer-spacing" class="row">
                 <div class="col-sm-4">
@@ -320,7 +336,8 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish" rel="noopener">
+                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish"
+                                rel="noopener">
                                 <i class="fab fa-youtube" aria-hidden="true"></i>
                                 <span class="sr-only">YouTube</span>
                             </a>
@@ -343,6 +360,7 @@
 
             </div>
         </footer>
+        <!---------------------------------End of Footer------------------------------------------------>
     </div>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
