--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
 <body>
     <div class="container-fluid">
         <header class="row">
+            <!--------------------------Bootstrap Navigation Bar---------------------------->
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white navbar-padding">
 
                 <a class="navbar-logo" href="index.html">Hannah McNeish | Journalist</a>
@@ -37,10 +38,12 @@
                 </div>
 
             </nav>
+            <!-----------------------End of Navigation Bar------------------------------------>
         </header>
+        <!-----------------------------Contact Form------------------------------------------->
         <section id="contact-page-background" class="row justify-content-center">
-                <div class="col-sm-10 col-lg-6">
-                    <div class="form-background">
+            <div class="col-sm-10 col-lg-6">
+                <div class="form-background">
                     <form action="confirmation.html" class="form-position">
                         <h2>Contact Hannah</h2>
                         <div class="mb-3">
@@ -68,13 +71,15 @@
                             <textarea class="form-control" id="message" rows="3"
                                 placeholder="Please write your message here"></textarea>
                         </div>
-                        
+
                         <button type="submit" class="btn btn-secondary">Submit</button>
 
                     </form>
-                    </div>
                 </div>
+            </div>
+            <!-----------------------------End of Contact Form------------------------------------->
         </section>
+        <!---------------------------------------------Footer------------------------------------------------------------->
         <footer>
             <div id="footer-spacing" class="row">
                 <div class="col-sm-4">
@@ -95,7 +100,8 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish" rel="noopener">
+                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish"
+                                rel="noopener">
                                 <i class="fab fa-youtube" aria-hidden="true"></i>
                                 <span class="sr-only">YouTube</span>
                             </a>
@@ -118,6 +124,7 @@
 
             </div>
         </footer>
+        <!---------------------------------End of Footer------------------------------------------------>
     </div>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
