--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This site presents the work undertaken by Hannah McNeish">
     <meta name="keywords"
         content="investigative journalism, public health, ethical health reporting, human rights, photography">
-    <meta name="author" content="Hannah McNeish">  
+    <meta name="author" content="Hannah McNeish">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -19,6 +19,7 @@
 <body>
     <div class="container-fluid">
         <header class="row">
+            <!--------------------------Bootstrap Navigation Bar---------------------------->
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white navbar-padding">
 
                 <a class="navbar-logo" href="index.html">Hannah McNeish | Journalist</a>
@@ -36,7 +37,9 @@
                 </div>
 
             </nav>
+            <!-----------------------End of Navigation Bar------------------------------------>
         </header>
+        <!----------------------------Hero Section------------------>
         <section class="row">
             <div id="hero-image-row">
                 <div class="hero-image-text">
@@ -48,34 +51,52 @@
                 </div>
             </div>
         </section>
+        <!-------------------End of Hero Section----------------------->
 
         <section class="row">
+            <!--------------------About Section---------------------------->
             <div id="about-row-background">
                 <div class="about-row-text">
                     <h2>About</h2>
                     <p class="about-line">|</p>
-                    <p>Hannah is a Glasgow based freelance journalist who works in print, TV and as a radio producer and presenter.
-Reporting on human rights, climate change, women, global health, science and investigations.</p>
+                    <p>Hannah is a Glasgow based freelance journalist who works in print, TV and as a radio producer and
+                        presenter.
+                        Reporting on human rights, climate change, women, global health, science and investigations.</p>
 
                 </div>
             </div>
-
+            <!--------------------End of About Section---------------------->
         </section>
 
         <section class="row justify-content-center profile-row">
+            <!--------------------Biograpgy Section ------------------------->
             <div class="col-lg-6 col-sm-12 g-0">
                 <div class="text-center">
-                    <img src="assets/images/hannah-mcneish-profile.jpg" class="img-fluid" alt="Profile picture of Hannah McNeish">
+                    <img src="assets/images/hannah-mcneish-profile.jpg" class="img-fluid"
+                        alt="Profile picture of Hannah McNeish">
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12 g-0">
                 <div class="biography-text">
                     <h2>Biography</h2>
-                    <p>Hannah McNeish is a multi-lingual and mutlimedia journalist, previously based in East Africa but travelled across the continent in search of stories. She is most passionate about rights and conflict, and these topics have been the crux of her reporting since she started working in radio, papers and magazines in Chile in 2009, and graduated to the U.K then Africa in 2010. She relocated to Glasgow in 2016, much to the disappointment of some governments and large organisations, and still has many more corners to explore and try to shine a light on. She has written, filmed and photographed for the main wire agencies, British and American newspapers, magazines, a range of NGOs and the UN, and major broadcasters such as the BBC and Al Jazeera.</p>
-                    <div class="bio-buttons-position"><span><a href="library.html" class="btn btn-secondary bio-buttons">View Hannah's Work</a></span><span><a href="contact.html" class="btn btn-secondary bio-buttons">Contact Hannah</a></span></div>
+                    <p>Hannah McNeish is a multi-lingual and mutlimedia journalist, previously based in East Africa but
+                        travelled across the continent in search of stories. She is most passionate about rights and
+                        conflict, and these topics have been the crux of her reporting since she started working in
+                        radio, papers and magazines in Chile in 2009, and graduated to the U.K then Africa in 2010. She
+                        relocated to Glasgow in 2016, much to the disappointment of some governments and large
+                        organisations, and still has many more corners to explore and try to shine a light on. She has
+                        written, filmed and photographed for the main wire agencies, British and American newspapers,
+                        magazines, a range of NGOs and the UN, and major broadcasters such as the BBC and Al Jazeera.
+                    </p>
+                    <div class="bio-buttons-position"><span><a href="library.html"
+                                class="btn btn-secondary bio-buttons">View Hannah's Work</a></span><span><a
+                                href="contact.html" class="btn btn-secondary bio-buttons">Contact Hannah</a></span>
+                    </div>
                 </div>
             </div>
+            <!-------------------------End of Biography Section------------------------------------->
         </section>
+        <!---------------------------------------------Footer------------------------------------------------------------->
         <footer>
             <div id="footer-spacing" class="row">
                 <div class="col-sm-4">
@@ -97,8 +118,8 @@ Reporting on human rights, climate change, women, global health, science and inv
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank"
-                                href="https://www.youtube.com/results?search_query=hannah+mcneish" rel="noopener">
+                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish"
+                                rel="noopener">
                                 <i class="fab fa-youtube" aria-hidden="true"></i>
                                 <span class="sr-only">YouTube</span>
                             </a>
@@ -121,6 +142,7 @@ Reporting on human rights, climate change, women, global health, science and inv
 
             </div>
         </footer>
+        <!---------------------------------End of Footer------------------------------------------------>
     </div>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
